deployment/kustomize/overlays/production/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: uitsmijter-docs
  labels:
    uitsmijter.io/cert-sync: "true"
